Convert most of the code base over to Kotlin (#28)